[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "board-games-value"
version = "0.1.0"
description = "Board games value scraping and analysis"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "requests-cache",
    "tenacity",
    "SQLAlchemy",
    "schedule",
    "pandas",
    "streamlit",
    "pytest",
]